Arreglos de Bugs+Inicio de Sesion(solo index)

--- a/Administracion/gestionDeLibros.html
+++ b/Administracion/gestionDeLibros.html
@@ -223,7 +223,7 @@
 							<a id="sit" >Siguiente</a>
 						</div>	 -->
 					</article>
-					<article id="fichaTecnia" class="margenLibro delete">
+					<article id="fichaTecnia" class="margenLibro delete" name="4">
 						<header>
 							<h3>Ficha Tecnica Del Libro</h3>
 						</header>
@@ -269,7 +269,7 @@
 						</div>-->	
 						<div id="msj"></div>
 					</article>	
-					<article id="fichaTecnica" class="margenLibro ingresars2">
+					<article id="fichaTecnica" class="margenLibro ingresars2" name="5">
 						<header>
 							<h3>Ingresar Nuevo Prestamo De Libro</h3>
 						</header>
