--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script src="js/jquery-1.10.2.min.js"></script>
 	<script src="js/script.min.js"></script>
 	<script src="js/swipe.min.js"></script>
-
+	<script src="js/login.js"></script>
 </head>
 <body class="p-inicio">
 
@@ -154,15 +154,15 @@
 
 		<h3 class="widget-title">Inicio de sesión</h3>
 
-		<form name="loginform" id="loginform" action="" method="post">		
+		<div name="loginform" id="loginform">		
 			<p class="login-username">
-				<label for="user_login">Usuario</label>
-				<input type="text" name="log" id="user_login" class="input" value="" size="20">
+				<label for="user_login">Usuario</label><br>
+				<input type="text" name="log" id="user_login" class="input" size="20">
 			</p>
 
 			<p class="login-password">
 				<label for="user_pass">Contraseña</label>
-				<input type="password" name="pwd" id="user_pass" class="input" value="" size="20">
+				<input type="password" name="pwd" id="user_pass" class="input"  size="20">
 			</p>
 			
 			<p class="login-remember">
@@ -174,7 +174,7 @@
 				<input type="submit" name="submit" id="submit" class="button-primary" value="Iniciar sesión →">
 				<input type="hidden" name="redirect_to" value="">
 			</p>		
-		</form>
+		</div>
 
 		<ul class="pagenav sidebar_login_links">
 			<li class="lost_password-link">
