Cambios en los enlaces de navegacion

--- a/Administracion/foroResponder.html
+++ b/Administracion/foroResponder.html
@@ -50,9 +50,9 @@
 				<div class="entry-content estilo-entry-content" >
 					<p><img src="../images/post1.jpg" alt="Chicos jugando futbol"></p>
 					<ul class="navegacion">
-						<li><a href="#">Inscripción</a></li>
+						<li><a href="inscripcion.html">Inscripción</a></li>
 						<li><a href="reinscripcion.html">Reiscripcion</a></li>
-						<li><a href="#">Mensajeria</a></li>
+						<li><a href="mensajeriaAdministracion.html">Mensajeria</a></li>
 						<li><a href="#">Usuarios</a></li>
 						<li><a href="gestion.html">Procesos De Gestión</a></li>
 						<li><a href="#">Tramitacion De Documentos</a></li>
