--- a/Administracion/foroNuevo.html
+++ b/Administracion/foroNuevo.html
@@ -13,7 +13,8 @@
 	<script src="../js/script.min.js"></script>
 	<script src="../js/swipe.min.js"></script>
 	<script src="http://js.nicedit.com/nicEdit-latest.js" type="text/javascript"></script>
-<script type="text/javascript">bkLib.onDomLoaded(nicEditors.allTextAreas);</script>
+	<script type="text/javascript">bkLib.onDomLoaded(nicEditors.allTextAreas);</script>
+	<script src="../js/javascriptCindy.js"></script>
 </head>
 <body class="p-admision">
 
@@ -50,9 +51,9 @@
 				<div class="entry-content estilo-entry-content" >
 					<p><img src="../images/post1.jpg" alt="Chicos jugando futbol"></p>
 					<ul class="navegacion">
-						<li><a href="#">Inscripción</a></li>
+						<li><a href="inscripcion.html">Inscripción</a></li>
 						<li><a href="reinscripcion.html">Reiscripcion</a></li>
-						<li><a href="#">Mensajeria</a></li>
+						<li><a href="mensajeriaAdministracion.html">Mensajeria</a></li>
 						<li><a href="#">Usuarios</a></li>
 						<li><a href="gestion.html">Procesos De Gestión</a></li>
 						<li><a href="#">Tramitacion De Documentos</a></li>
@@ -159,7 +160,8 @@
 					<div id="cent">
 						<button id="enviarResponder" type="submit">Enviar</button>
 					</div>
-				</form>			
+					<input name="date" type="date">
+				</form>		
 			</article>
 
 		</div>
