--- a/Administracion/intranetAdministracion.html
+++ b/Administracion/intranetAdministracion.html
@@ -15,8 +15,7 @@
 
 </head>
 <body class="p-admision">
-
-	<!-- HEADERRRRRRRRRR -->
+	<!-- HEADERRRRRRRRRRRR -->
 	<header class="site-header">
 		<div class="header-image-container estilo-header">
 			<a href="../index.html" class="header_image"><img src="../images/v90_header.jpg" alt="Venezuela 90"></a>
@@ -49,12 +48,13 @@
 				<div class="entry-content estilo-entry-content" >
 					<p><img src="../images/post1.jpg" alt="Chicos jugando futbol"></p>
 					<ul class="navegacion">
-						<li><a href="inscripcion.html">Inscripción</a></li>
+						<li><a href="#">Inscripción</a></li>
 						<li><a href="reinscripcion.html">Reiscripcion</a></li>
 						<li><a href="mensajeriaAdministracion.html">Mensajeria</a></li>
 						<li><a href="#">Usuarios</a></li>
 						<li><a href="gestion.html">Procesos De Gestión</a></li>
 						<li><a href="#">Tramitacion De Documentos</a></li>
+						<li><a href="foros.html">Foros</a></li>
 					</ul>
 				</div>
 			</article>
@@ -137,49 +137,97 @@
 			</aside>
 		</div>
 		<!-- LADOOOO DERECHOOOOOOOOOOOOOOOOOO -->
+		<!-- Noticias -->
 		<div class="sidebar-wrap estilo-sidebar-wrap">
-			<article id="intranetPrincipal">
-				<header><h2>Reinscripción</h2></header>
+			<article>
+				<header><h2>Bienvenido</h2></header>
 				<hr />
 			</article>
 			<article id="noticias">
-				<header><h3>Seleccionar Una Opción</h3></header>
-				<div id="contenidoNoticias">
-					<ul id="listaGestion">
-						<li><a id="iconoconsultar" href="#"></a><a class="textoAbajo" href="#">Consultar</a></li>
-						<li><a id="iconomodificar" href="#"></a><a class="textoAbajo" href="#">Modificar</a></li>
-					</ul>
-					<div id="numerocedula">
-						<form action="" method="get" accept-charset="utf-8">
-							<label id="labelcedula">Numero De Cedula: </label>
-							<input type="text" placeholder="Ej.: 25154875" >
-							<span id="ced"></span>
-						</form>
-						<div id="atr">
-							<a id="atras" href="#"></a>
-							<a id="at" href="#">Atrás</a>
-						</div>
-						<div id="sig">
-							<a id="siguiente" href="#"></a>
-							<a id="sit" href="#">Siguiente</a>
-						</div>
-					</div>
-				</div>				
+				<header><h3>Noticias</h3></header>
+				<div class="contenidoNoticias">
+					<figure>
+						<img src="../images/post1.jpg">			
+					</figure>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
+				<div class="contenidoNoticias">
+					<figure>
+						<img src="../images/post1.jpg">			
+					</figure>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
+				<div class="contenidoNoticias">
+					<figure>
+						<img src="../images/post1.jpg">			
+					</figure>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
+			</article>
+		</div>
+		<!-- Informacion General -->
+		<div class="sidebar-wrap estilo-sidebar-wrap" id="info">
+			<article id="noticias">
+				<header><h3>Información General</h3></header>
+				<div class="contenidoNoticias">
+					<figure>
+						<img src="../images/post1.jpg">			
+					</figure>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
+				<div class="contenidoNoticias">
+					<figure>
+						<img src="../images/post1.jpg">							
+					</figure>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
+				<div class="contenidoNoticias">
+					<figure>
+						<img src="../images/post1.jpg">							
+					</figure>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
 			</article>
 		</div>
 	</section>
-
-
-
-<footer class="site-footer" role="contentinfo">
-	<div class="site-info">
-		<span class="v90-logo"></span>
-		<b>Unidad Educativa Venezuela 90</b><br>
-		<address>Carabobo, Valencia, Av. Soublette, <a href="tel:0241-859-5806">0241-859-5806</a></address>
-	</div><!-- .site-info -->
-</footer>
-
-
+	<!-- FOOTERRRRR -->
+	<footer class="site-footer" role="contentinfo">
+		<div class="site-info">
+			<span class="v90-logo"></span>
+			<b>Unidad Educativa Venezuela 90</b><br>
+			<address>Carabobo, Valencia, Av. Soublette, <a href="tel:0241-859-5806">0241-859-5806</a></address>
+		</div><!-- .site-info -->
+	</footer>
 
 </body>
 </html>
