--- a/Administracion/perfilAdministracion.html
+++ b/Administracion/perfilAdministracion.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="../css/normalize.css">
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" href="../css/todoEstilo.css">
+	<link rel="stylesheet" href="../css/miEstilo2.css">
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
 	<script src="../js/jquery-1.10.2.min.js"></script>
 	<script src="../js/script.min.js"></script>
@@ -48,13 +49,12 @@
 				<div class="entry-content estilo-entry-content" >
 					<p><img src="../images/post1.jpg" alt="Chicos jugando futbol"></p>
 					<ul class="navegacion">
-						<li><a href="#">Inscripción</a></li>
+						<li><a href="inscripcion.html">Inscripción</a></li>
 						<li><a href="reinscripcion.html">Reiscripcion</a></li>
-						<li><a href="#">Mensajeria</a></li>
+						<li><a href="mensajeriaAdministracion.html">Mensajeria</a></li>
 						<li><a href="#">Usuarios</a></li>
 						<li><a href="gestion.html">Procesos De Gestión</a></li>
 						<li><a href="#">Tramitacion De Documentos</a></li>
-						<li><a href="#">Foros</a></li>
 					</ul>
 				</div>
 			</article>
@@ -140,82 +140,120 @@
 		<!-- Noticias -->
 		<div class="sidebar-wrap estilo-sidebar-wrap">
 			<article>
-				<header><h2>Bienvenido</h2></header>
+				<header><h2>Mi Perfil</h2></header>
 				<hr />
 			</article>
 			<article id="noticias">
-				<header><h3>Noticias</h3></header>
-				<div class="contenidoNoticias">
-					<figure>
-						<img src="../images/post1.jpg">			
-					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-				<div class="contenidoNoticias">
-					<figure>
-						<img src="../images/post1.jpg">			
-					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-				<div class="contenidoNoticias">
-					<figure>
-						<img src="../images/post1.jpg">			
-					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-			</article>
-		</div>
-		<!-- Informacion General -->
-		<div class="sidebar-wrap estilo-sidebar-wrap" id="info">
-			<article id="noticias">
-				<header><h3>Información General</h3></header>
-				<div class="contenidoNoticias">
-					<figure>
-						<img src="../images/post1.jpg">			
-					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-				<div class="contenidoNoticias">
-					<figure>
-						<img src="../images/post1.jpg">							
-					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-				<div class="contenidoNoticias">
-					<figure>
-						<img src="../images/post1.jpg">							
-					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<header><h3>Información Personal</h3></header>
+				<table border=1 id="tabFoto" class="tablaPerfilDocente">
+					<tbody>
+						<thead>
+							<tr >
+								<td colspan=2>Foto De Perfil</td>
+							</tr>
+						</thead>
+						<tr class="centrar">
+							<td colspan=2>
+								<figure>
+									<img width="70" src="../images/user.png">
+								</figure>
+								<a href="#">Cambiar</a>
+							</td>
+						</tr>
+									
+					</tbody>
+				</table>
+				<table border=1 class="tablaPerfilDocente">
+					<tbody>
+						<thead>
+							<tr>
+								<td colspan=2>Información Personal </td>
+							</tr>
+						</thead>
+						<tr>
+							<td class="right espacioRi">Apellidos: </td>
+							<td class="left espacioLe"><span id="nomPerfil">Salinas Zambrano</span> </td>
+						</tr>
+						<tr>
+							<td class="right espacioRi">Nombres: </td>
+							<td class="left espacioLe"><span id="nomPerfil">Cindy Yarimar</span> </td>
+						</tr>
+						<tr>
+							<td class="right espacioRi">Cedula: </td>
+							<td class="left espacioLe"><span id="nomPerfil">21.029.953</span> </td>
+						</tr>
+						<tr>
+							<td class="right espacioRi">Sexo: </td>
+							<td class="left espacioLe"><span id="nomPerfil">Femenino</span> </td>
+						</tr>
+						<tr>
+							<td class="right espacioRi">Estado Civil: </td>
+							<td class="left espacioLe"><span id="nomPerfil">Soltero</span> </td>
+						</tr>
+						<tr>
+							<td class="right espacioRi">Fecha De Nacimiento: </td>
+							<td class="left espacioLe"><span id="nomPerfil">14/02/1993</span> </td>
+						</tr>
+						<tr>
+							<td class="right espacioRi">Nacionalidad: </td>
+							<td class="left espacioLe"><span id="nomPerfil">Venezolana</span> </td>
+						</tr>
+						<tr>
+							<td class="right espacioRi">Lugar Nacimiento: </td>
+							<td class="left espacioLe"><span id="nomPerfil">Valencia</span> </td>
+						</tr>
+						<tr>
+							<td class="right espacioRi">Contraseña: </td>
+							<td class="left espacioLe"><a href="#">Cambiar Contraseña</a> </td>
+						</tr>
+					</tbody>
+				</table>
+
+				<table border=1 class="tablaPerfilDocente">
+					<tbody>
+						<thead>
+							<tr>
+								<td colspan=2>Lugar De Residencia</td>
+							</tr>
+						</thead>
+						<tr>
+							<td class="right espacioRi">Ciudad: </td>
+							<td class="left espacioLe"><span id="nomPerfil">Valencia</span> </td>
+						</tr>
+						<tr>
+							<td class="right espacioRi">Estado: </td>
+							<td class="left espacioLe"><span id="nomPerfil">Carabobo</span> </td>
+						</tr>
+						<tr>
+							<td class="right espacioRi">País: </td>
+							<td class="left espacioLe"><span id="nomPerfil">Venezuela</span> </td>
+						</tr>				
+					</tbody>
+				</table>
+
+				<table border=1 class="tablaPerfilDocente">
+					<tbody>
+						<thead>
+							<tr>
+								<td colspan=2>Información De Contacto</td>
+							</tr>
+						</thead>
+						<tr>
+							<td class="right espacioRi">Dirección: </td>
+							<td class="left espacioLe"><input type="text" value="Prebo"> </td>
+						</tr>
+						<tr>
+							<td class="right espacioRi">Telefono: </td>
+							<td class="left espacioLe"><input type="text" value="0426-3431078"> </td>
+						</tr>						
+						<tr>
+							<td class="right espacioRi">Email: </td>
+							<td class="left espacioLe"><input type="text" value="cindysalinas15@gmail.com"> </td>
+						</tr>				
+					</tbody>
+				</table>
+				<div class="centrar">
+					<button id="butAce">Aceptar</button>
 				</div>
 			</article>
 		</div>
