Imprimir "Evaluacion Asistencia"
en viewAsistenciaEvaluacion , estan en comentario los TR y su contenido,
esto se eliminara en la version final :D

--- a/Administracion/viewAsistenciaEvaluacion.html
+++ b/Administracion/viewAsistenciaEvaluacion.html
@@ -38,11 +38,13 @@
 		</div>
 	</header>
 
-	<section id="sectionAsistEv" class="main-wrap estilo-main-wrap">
-		<!-- LADOOOO IZQUIERDAOOOO -->
-		
+	
+	 <section id="sectionAsistEv" class="main-wrap estilo-main-wrap">
+		<!--LADOOOO IZQUIERDAOOOO -->
+		<br>
+		<iframe src="../Administracion/contenidoAsistenciaEvaluacion.html"></iframe>
 		<!-- LADOOOO DERECHOOOOOOOOOOOOOOOOOO -->
-		<div id="divCompleto">
+	<!--	<div id="divCompleto">
 			<article id="intranetPrincipal">
 				<header><h2>Calificaciones</h2></header>
 				<hr />
@@ -51,7 +53,7 @@
 				<header><h3>Consultar</h3></header>
 				<table border=1 id="tablaAsisEva">					
 					<!-- 1 -->
-					<tr>
+				<!--	<tr>
 						<td id="verAli" rowspan=4 colspan=30>
 							UNIDAD EDUCATIVA VENEZUELA 90
 						</td>
@@ -189,7 +191,7 @@
 
 					<!-- 2 -->
 
-					<tr>
+					<!--<tr>
 						<td>N°</td>
 						<td>Cedula</td>
 						<td>Apellidos y Nombres</td>
@@ -197,7 +199,7 @@
 						
 					</tr>
 					<!-- Datoooosss -->
-					<tr>
+					<!--<tr>
 						<td>01</td>
 						<td>V-26580756</td>
 						<td >SALAZAR INAGA, LUINDER JESUS</td>
@@ -314,7 +316,8 @@
 				</div>	
 			</article>
 
-		</div>
+		</div>-->
+		
 	</section>
 
 
