--- a/Administracion/foroNuevo.html
+++ b/Administracion/foroNuevo.html
@@ -12,8 +12,6 @@
 	<script src="../js/jquery-1.10.2.min.js"></script>
 	<script src="../js/script.min.js"></script>
 	<script src="../js/swipe.min.js"></script>
-	<script src="http://js.nicedit.com/nicEdit-latest.js" type="text/javascript"></script>
-	<script type="text/javascript">bkLib.onDomLoaded(nicEditors.allTextAreas);</script>
 	<script src="../js/javascriptCindy.js"></script>
 </head>
 <body class="p-admision">
@@ -57,6 +55,7 @@
 						<li><a href="#">Usuarios</a></li>
 						<li><a href="gestion.html">Procesos De Gestión</a></li>
 						<li><a href="#">Tramitacion De Documentos</a></li>
+						<li><a href="foros.html">Foros</a></li>
 					</ul>
 				</div>
 			</article>
@@ -146,22 +145,21 @@
 			</article>
 			<article id="noticias">
 				<header><h3>Nuevo Foro</h3></header>
-				<form id="formularioResponder">
+				<div id="formularioFN"class="formFN">
 					<div class="divFormRes">
-						<label id="asunt" name="asunto">Asunto</label>
-						<input id="eAsunto" name="asunto" type="text">
+						<label class="asunt2" name="asunto">Asunto</label>
+						<input id="asuntoFn" class="elAsunto" name="asunto" type="text">
 					</div>
 					<div class="divFormRes">
 						<label id="labmensaje"name="mensaje">Mensaje</label>
 						<div id="areaText">
-							<textarea id="textarea1" name="mensaje"></textarea>
+							<textarea id="mensajeFN" name="mensaje"></textarea>
 						</div>
 					</div>
 					<div id="cent">
-						<button id="enviarResponder" type="submit">Enviar</button>
+						<button id="enviarNuevoForo" class="enviarResponder">Enviar</button>
 					</div>
-					<input name="date" type="date">
-				</form>		
+				</div>		
 			</article>
 
 		</div>
