Cambiando de Pagina con links+datos

--- a/Administracion/foroNuevo.html
+++ b/Administracion/foroNuevo.html
@@ -163,7 +163,7 @@
 					</div>
 				</div>		
 			</article>
-			<a href="" id="linkprobando">a</a>
+			<a  id="linkprobando">a</a>
 		</div>
 	</section>
 
