--- a/Administracion/foroResponder.html
+++ b/Administracion/foroResponder.html
@@ -14,6 +14,7 @@
 	<script src="../js/swipe.min.js"></script>
 	<script src="http://js.nicedit.com/nicEdit-latest.js" type="text/javascript"></script>
 <script type="text/javascript">bkLib.onDomLoaded(nicEditors.allTextAreas);</script>
+<script src="../js/gestionCalendarioEscolar.js"></script>
 </head>
 <body class="p-admision">
 
