Foro Administrador Listo

--- a/Administracion/foroResponder.html
+++ b/Administracion/foroResponder.html
@@ -148,7 +148,7 @@
 			</article>
 			<article id="noticias">
 				<header><h3>Su Respuesta</h3></header>
-				<form id="formularioResponder">
+				<div id="formularioResponder">
 					<div class="divFormRes">
 						<label id="asunt" name="asunto">Asunto</label>
 						<input id="inputResForo" class=".asuntoResponder" name="asunto" type="text" value="RE: Foro 1">
@@ -160,9 +160,9 @@
 						</div>
 					</div>
 					<div id="cent">
-						<button class="enviarResponder" type="submit">Enviar</button>
+						<button id="enviarResponderForo" class="enviarResponder">Enviar</button>
 					</div>
-				</form>			
+				</div>			
 			</article>
 
 		</div>
