--- a/Administracion/gestionInformacionInstitucion.html
+++ b/Administracion/gestionInformacionInstitucion.html
@@ -49,9 +49,9 @@
 				<div class="entry-content estilo-entry-content" >
 					<p><img src="../images/post1.jpg" alt="Chicos jugando futbol"></p>
 					<ul class="navegacion">
-						<li><a href="inscripcion.html">Inscripción</a></li>
+						<li><a href="#">Inscripción</a></li>
 						<li><a href="reinscripcion.html">Reiscripcion</a></li>
-						<li><a href="mensajeriaAdministracion.html">Mensajeria</a></li>
+						<li><a href="#">Mensajeria</a></li>
 						<li><a href="#">Usuarios</a></li>
 						<li><a href="gestion.html">Procesos De Gestión</a></li>
 						<li><a href="#">Tramitacion De Documentos</a></li>
@@ -150,7 +150,7 @@
 						<li><a id="iconomodificar" href="gestionCalendarioEscolar.html"></a><a class="textoAbajo" href="gestionCalendarioEscolar.html">Gestión Del Calendario Escolar</a></li>
 					</ul>							
 				</div>		
-				<article id="formularioIngresarLibro" class="margenLibro">
+				<article class="margenLibro">
 					<header>
 						<h3>Carga De Noticias</h3>
 					</header>
@@ -159,7 +159,7 @@
 						<li><a id="iconomodificar" href="#"></a><a class="textoAbajo" href="#">Modificar</a></li>
 					</ul>	
 				</article>	
-				<article id="formularioIngresarLibro" class="margenLibro">
+				<article class="margenLibro">
 					<header>
 						<h3>Ingresar Noticias</h3>
 					</header>
@@ -183,7 +183,7 @@
 					</div>
 				</form>	
 				</article>	
-				<article id="formularioIngresarLibro" class="margenLibro">
+				<article class="margenLibro">
 					<header>
 						<h3>Modificar</h3>
 					</header>
@@ -224,7 +224,7 @@
 						</tbody>
 					</table>					
 				</article>	
-				<article id="formularioIngresarLibro" class="margenLibro">
+				<article class="margenLibro">
 					<header>
 						<h3>Modificar Noticia</h3>
 					</header>
