--- a/Administracion/viewForos.html
+++ b/Administracion/viewForos.html
@@ -56,6 +56,7 @@
 						<li><a href="#">Usuarios</a></li>
 						<li><a href="gestion.html">Procesos De Gestión</a></li>
 						<li><a href="#">Tramitacion De Documentos</a></li>
+						<li><a href="foros.html">Foros</a></li>
 					</ul>
 				</div>
 			</article>
@@ -168,43 +169,7 @@
 					</div>
 				</div>
 				<div id="respuestasForos">
-					<div id="arr">
-						<div id="foroTema">
-							<figure>
-								<img src="user.png">			
-							</figure>
-							<div class="nombreTemaRes">
-								<p>RE: Nombre Del Tema</p>
-								<span>De Nombre Del Creador - Martes, 5 de Noviembre de 2013, 15:00</span>
-							</div>
-						</div>
-						<p id="tex2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					</div>
-					<hr>
-
-					<div id="arr2">
-						<div id="foroTema">
-							<figure>
-								<img src="user.png">			
-							</figure>
-							<div id="nombreTema">
-								<p>RE: Nombre Del Tema</p>
-								<span>De Nombre Del Creador - Martes, 5 de Noviembre de 2013, 15:00</span>
-							</div>
-						</div>
-						<p id="tex2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					</div>
-					<hr>
+					
 				</div>			
 			</article>
 
