Creado las cookies + validacion de ingreso

--- a/Administracion/foroNuevo.html
+++ b/Administracion/foroNuevo.html
@@ -15,6 +15,8 @@
 	<script src="../js/script.min.js"></script>
 	<script src="../js/swipe.min.js"></script>
 	<script src="../js/javascriptCindy.js"></script>
+	<script src="../js/jquery.cookie.js"></script>
+	<script src="../js/admins.js"></script>
 </head>
 <body class="p-admision">
 
@@ -27,7 +29,7 @@
 			<nav>
 				<span class="toggle-menu">Menú</span>
 				<a href="#" class="search-form" id="nombreUsuario">
-					Cindy Yarimar Salinas Zambrano
+					
 				</a>
 				<ul>
 					<li><a href="../index.html">Inicio</a></li>
