--- a/Administracion/foroResponder.html
+++ b/Administracion/foroResponder.html
@@ -13,9 +13,10 @@
 	<script src="../js/script.min.js"></script>
 	<script src="../js/swipe.min.js"></script>
 	<script src="http://js.nicedit.com/nicEdit-latest.js" type="text/javascript"></script>
-<script type="text/javascript">bkLib.onDomLoaded(nicEditors.allTextAreas);</script>
-<script src="../js/javascriptForoResponder.js"></script>
-
+	<script type="text/javascript">bkLib.onDomLoaded(nicEditors.allTextAreas);</script>
+	<script src="../js/javascriptForoResponder.js"></script>
+	<script src="../js/jquery.cookie.js"></script>
+	<script src="../js/admins.js"></script>
 </head>
 <body id="bodyForoResponder" class="p-admision">
 
@@ -28,7 +29,7 @@
 			<nav>
 				<span class="toggle-menu">Menú</span>
 				<a href="#" class="search-form" id="nombreUsuario">
-					Cindy Yarimar Salinas Zambrano
+					
 				</a>
 				<ul>
 					<li><a href="../index.html">Inicio</a></li>
