--- a/Administracion/inscripcion.html
+++ b/Administracion/inscripcion.html
@@ -18,6 +18,8 @@
 	<script src="../js/datos_constancia.js"></script>
 	<script src="../js/jsoninscripcion.js"></script>
 	<script src="../js/jquery.validate.js"></script>
+	<script src="../js/jquery.cookie.js"></script>
+	<script src="../js/admins.js"></script>
 </head>
 <body class="p-admision">
 
@@ -30,7 +32,7 @@
 		<nav>
 			<span class="toggle-menu">Menú</span>
 			<a href="#" class="search-form" id="as">
-				Cindy Yarimar Salinas Zambrano
+				
 			</a>
 			<ul>
 				<li><a href="../index.html">Inicio</a></li>
