--- a/Docente/HorarioCalendarioEscolar.html
+++ b/Docente/HorarioCalendarioEscolar.html
@@ -13,6 +13,8 @@
 	<script src="../js/jquery-1.10.2.min.js"></script>
 	<script src="../js/script.min.js"></script>
 	<script src="../js/swipe.min.js"></script>
+	<script src="../js/jquery.cookie.js"></script>
+	<script src="../js/docente.js"></script>
 
 </head>
 <body class="p-admision">
@@ -25,7 +27,7 @@
 			<nav>
 				<span class="toggle-menu">Menú</span>
 				<a href="#" class="search-form" id="nombreUsuario">
-					Cindy Yarimar Salinas Zambrano
+				
 				</a>
 				<ul>
 					<li><a href="../index.html">Inicio</a></li>
