--- a/Administracion/constancias.html
+++ b/Administracion/constancias.html
@@ -14,6 +14,8 @@
 	<script src="../js/script.min.js"></script>
 	<script src="../js/swipe.min.js"></script>
 	<script src="../js/datos_constancia.js"></script>
+	<script src="../js/jquery.cookie.js"></script>
+	<script src="../js/admins.js"></script>
 
 </head>
 <body class="p-admision">
@@ -26,8 +28,8 @@
 	<div class="nav-wrap">
 		<nav>
 			<span class="toggle-menu">Menú</span>
-			<a href="#" class="search-form" id="as">
-				Cindy Yarimar Salinas Zambrano
+			<a href="#" class="search-form" id="nombreUsuario">
+				
 			</a>
 			<ul>
 				<li><a href="../index.html">Inicio</a></li>
