--- a/Administracion/intranetAdministracion.html
+++ b/Administracion/intranetAdministracion.html
@@ -12,7 +12,8 @@
 	<script src="../js/jquery-1.10.2.min.js"></script>
 	<script src="../js/script.min.js"></script>
 	<script src="../js/swipe.min.js"></script>
-
+	<script src="../js/jquery.cookie.js"></script>
+	<script src="../js/admins.js"></script>
 </head>
 <body class="p-admision">
 	<!-- HEADERRRRRRRRRRRR -->
@@ -24,7 +25,7 @@
 			<nav>
 				<span class="toggle-menu">Menú</span>
 				<a href="#" class="search-form" id="nombreUsuario">
-					Cindy Yarimar Salinas Zambrano
+					
 				</a>
 				<ul>
 					<li><a href="../index.html">Inicio</a></li>
@@ -217,6 +218,7 @@
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				</div>
+				<a id="prueba">cookie</a>
 			</article>
 		</div>
 	</section>
