--- a/Alumno/IntranetAlumno.html
+++ b/Alumno/IntranetAlumno.html
@@ -13,6 +13,8 @@
 	<script src="../js/jquery-1.10.2.min.js"></script>
 	<script src="../js/script.min.js"></script>
 	<script src="../js/swipe.min.js"></script>
+	<script src="../js/jquery.cookie.js"></script>
+	<script src="../js/studen.js"></script>
 
 </head>
 <body class="p-admision">
