--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
 	<script src="js/jquery-1.10.2.min.js"></script>
+	<script src="js/jquery.cookie.js"></script>
 	<script src="js/script.min.js"></script>
 	<script src="js/swipe.min.js"></script>
 	<script src="js/login.js"></script>
+
 </head>
 <body class="p-inicio">
 
