--- a/institucion.html
+++ b/institucion.html
@@ -61,9 +61,9 @@
 
 		<h3 class="widget-title">Inicio de sesión</h3>
 
-		<form name="loginform" id="loginform" action="" method="post">		
+		<div name="loginform">		
 			<p class="login-username">
-				<label for="user_login">Usuario</label>
+				<label for="user_login">Usuario</label><br>
 				<input type="text" name="log" id="user_login" class="input" value="" size="20">
 			</p>
 
@@ -81,7 +81,7 @@
 				<input type="submit" name="submit" id="submit" class="button-primary" value="Iniciar sesión →">
 				<input type="hidden" name="redirect_to" value="">
 			</p>		
-		</form>
+		</div>
 
 		<ul class="pagenav sidebar_login_links">
 			<li class="lost_password-link">
