--- a/Administracion/gestionDeLibros-c.html
+++ b/Administracion/gestionDeLibros-c.html
@@ -24,8 +24,8 @@
 		<div class="nav-wrap">
 			<nav>
 				<span class="toggle-menu">Menú</span>
-				<a href="#" class="search-form" id="nombreUsuario">
-					Cindy Yarimar Salinas Zambrano
+				<a href="perfilAdministracion.html" class="search-form" id="nombreUsuario">
+					
 				</a>
 				<ul>
 					<li><a href="../index.html">Inicio</a></li>
