--- a/Administracion/inscripcion.html
+++ b/Administracion/inscripcion.html
@@ -31,7 +31,7 @@
 	<div class="nav-wrap">
 		<nav>
 			<span class="toggle-menu">Menú</span>
-			<a href="#" class="search-form" id="as">
+			<a href="perfilAdministracion.html" class="search-form" id="as">
 				
 			</a>
 			<ul>
