--- a/Administracion/gestionDeLibros.html
+++ b/Administracion/gestionDeLibros.html
@@ -26,7 +26,7 @@
 		<div class="nav-wrap">
 			<nav>
 				<span class="toggle-menu">Menú</span>
-				<a  class="search-form" id="nombreUsuario">
+				<a href="perfilAdministracion.html" class="search-form" id="nombreUsuario">
 					
 				</a>
 				<ul>
