--- a/Administracion/perfilAdministracion.html
+++ b/Administracion/perfilAdministracion.html
@@ -25,7 +25,7 @@
 		<div class="nav-wrap">
 			<nav>
 				<span class="toggle-menu">Menú</span>
-				<a href="#" class="search-form" id="nombreUsuario">
+				<a href="perfilAdministracion.html" class="search-form" id="nombreUsuario">
 					
 				</a>
 				<ul>
@@ -173,35 +173,35 @@
 						</thead>
 						<tr>
 							<td class="right espacioRi">Apellidos: </td>
-							<td class="left espacioLe"><span id="nomPerfil">Salinas Zambrano</span> </td>
+							<td class="left espacioLe"><span id="nomPerfil" class="apPerfil"></span> </td>
 						</tr>
 						<tr>
 							<td class="right espacioRi">Nombres: </td>
-							<td class="left espacioLe"><span id="nomPerfil">Cindy Yarimar</span> </td>
+							<td class="left espacioLe"><span id="nomPerfil" class="nomPperfil"></span> </td>
 						</tr>
 						<tr>
 							<td class="right espacioRi">Cedula: </td>
-							<td class="left espacioLe"><span id="nomPerfil">21.029.953</span> </td>
+							<td class="left espacioLe"><span id="nomPerfil" class="cedPerfil"></span> </td>
 						</tr>
 						<tr>
 							<td class="right espacioRi">Sexo: </td>
-							<td class="left espacioLe"><span id="nomPerfil">Femenino</span> </td>
+							<td class="left espacioLe"><span id="nomPerfil" class="sexPerfil"></span> </td>
 						</tr>
 						<tr>
 							<td class="right espacioRi">Estado Civil: </td>
-							<td class="left espacioLe"><span id="nomPerfil">Soltero</span> </td>
+							<td class="left espacioLe"><span id="nomPerfil" class="edoCPerfil"></span> </td>
 						</tr>
 						<tr>
 							<td class="right espacioRi">Fecha De Nacimiento: </td>
-							<td class="left espacioLe"><span id="nomPerfil">14/02/1993</span> </td>
+							<td class="left espacioLe"><span id="nomPerfil" class="fechaPerfil"></span> </td>
 						</tr>
 						<tr>
 							<td class="right espacioRi">Nacionalidad: </td>
-							<td class="left espacioLe"><span id="nomPerfil">Venezolana</span> </td>
+							<td class="left espacioLe"><span id="nomPerfil" class="naciPerfil"></span> </td>
 						</tr>
 						<tr>
 							<td class="right espacioRi">Lugar Nacimiento: </td>
-							<td class="left espacioLe"><span id="nomPerfil">Valencia</span> </td>
+							<td class="left espacioLe"><span id="nomPerfil" class="lugar1"></span> </td>
 						</tr>
 						<tr>
 							<td class="right espacioRi">Contraseña: </td>
@@ -241,15 +241,15 @@
 						</thead>
 						<tr>
 							<td class="right espacioRi">Dirección: </td>
-							<td class="left espacioLe"><input type="text" value="Prebo"> </td>
+							<td class="left espacioLe"><input type="text" id="lugar2"> </td>
 						</tr>
 						<tr>
 							<td class="right espacioRi">Telefono: </td>
-							<td class="left espacioLe"><input type="text" value="0426-3431078"> </td>
+							<td class="left espacioLe"><input type="text" id="celPerfil"> </td>
 						</tr>						
 						<tr>
 							<td class="right espacioRi">Email: </td>
-							<td class="left espacioLe"><input type="text" value="cindysalinas15@gmail.com"> </td>
+							<td class="left espacioLe"><input type="text" id="mailPerfil"> </td>
 						</tr>				
 					</tbody>
 				</table>
